change focus ring color to lilac, textarea component for about_me and why_joined, fix datepicker day width to not get cut off

--- a/app/javascript/components/PhoneNumberField/style.scss
+++ b/app/javascript/components/PhoneNumberField/style.scss
@@ -1,3 +1,5 @@
+@import 'tailwindcss/utilities';
+
 .PhoneInput {
   // display: flex;
   // flex-direction: column;
@@ -32,7 +34,7 @@
     }
 
     .PhoneInputCountrySelect {
-      @apply focus:ring-indigo-500 focus:border-indigo-500 h-full py-0 pl-3 pr-7 border-transparent bg-transparent text-gray-500 sm:text-sm rounded-md;
+      @apply focus:ring-lilac focus:border-lilac h-full py-0 pl-3 pr-7 border-transparent bg-transparent text-gray-500 sm:text-sm rounded-md;
     }
 
     .PhoneInputCountryIcon,
@@ -41,7 +43,7 @@
     }
 
     .PhoneInputInput {
-      @apply flex-1 sm:col-span-3 focus:ring-indigo-500 focus:border-indigo-500 block w-full min-w-0 rounded-none rounded-r-md sm:text-sm border-gray-300 sm:w-1/2;
+      @apply flex-1 sm:col-span-3 focus:ring-lilac focus:border-lilac block w-full min-w-0 rounded-none rounded-r-md sm:text-sm border-gray-300 sm:w-1/2;
     }
   }
 
